tests/invalid/runtime/io_after_close.pts
import Io;

function main() : void {
    var f = Io.openText("io_after_close.txt", "w");
    f.write("x");
    f.close();
    f.read(1);
}
